@startuml

class Usuario {
  +main(args: String[]): void
}

interface Program {
  +run(): void
}

class Vista {
  -btnCountDown: JButton
  -btnCountUp: JButton
  -btnHalt: JButton
  -btnReverser: JButton
  -haltChecker: HaltChecker
  -countUpHandler: ProgramHandler
  -countDownHandler: ProgramHandler
  +Vista()
  +setCountUpHandler(handler: ProgramHandler): void
  +getCountUpHandler(): ProgramHandler
}

class ProgramHandler {
  +setNextHandler(handler: ProgramHandler): void
  +handleProgram(program: String): void
}

class CountUpHandler {
  +setNextHandler(handler: ProgramHandler): void
  +handleProgram(program: String): void
}

class CountDownHandler {
  +setNextHandler(handler: ProgramHandler): void
  +handleProgram(program: String): void
}

class InfiniteLoopException {
  +InfiniteLoopException(message: String)
}

class HaltChecker {
  +check(): void
}

class Reverser implements Program {
  +run(): void
}

class CountDownProgram implements Program {
  +run(): void
}

class CountUpProgram implements Program {
  +run(): void
}

Usuario --> ProgramHandler
ProgramHandler --> Vista
ProgramHandler --> ProgramHandler: nextHandler
ProgramHandler <|-- CountUpHandler
ProgramHandler <|-- CountDownHandler
ProgramHandler ..> InfiniteLoopException : throws
Vista --> Reverser
Vista --> CountDownProgram
Vista --> CountUpProgram
Vista --> HaltChecker
Program <|.. Reverser
Program <|.. CountDownProgram
Program <|.. CountUpProgram

@enduml